--- a/lms_frontend/package.json
+++ b/lms_frontend/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "postcss": "^8.5.3",
     "vite": "^6.0.1"
   }
 }
