--- a/lms_frontend/package.json
+++ b/lms_frontend/package.json
@@ -15,8 +15,11 @@
     "@mui/material": "^6.2.0",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.501.0",
     "react": "^18.3.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.2",
     "zustand": "^5.0.2"
